change text background to red

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token cfa736f7baab"
+    "chromatic": "npx chromatic --project-token cfa736f7baab --exit-zero-on-changes"
   },
   "eslintConfig": {
     "extends": [
